[package]
name = "muzic"
version = "1.0.0"
edition = "2021"
authors = ["Tobias <sandalbanditten@tutanota.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sandalbanditten/muzic"
description = """
A simple loop where you can add notes and play them, and a couple of other things.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
